Improve code style and remove some unnecessary lines.