@@ -21,20 +21,13 @@ public class Find_Topk_A_db2 {
         ArrayList<ArrayList<Integer>> path = new ArrayList<>();
         if (k <= path1.size() - 2) {
             int num = 0;
-            for (int i = 0; i < path2.size(); i++) {
+            for (ArrayList<Integer> integers : path2) {
                 for (int j = 0; j < path1.get(k + 1).size(); j++) {
-                    path.add(new ArrayList<Integer>());
-//                    path.get(num).addAll(path2.get(i));
-//                    path.get(num).addAll(path1.get(j));
-                    for (int l = 0; l < path2.get(i).size(); l++) {
-                        path.get(num).add(path2.get(i).get(l));
+                    path.add(new ArrayList<>());
+                    for (Integer integer : integers) {
+                        path.get(num).add(integer);
                     }
                     path.get(num).add(path1.get(k + 1).get(j));
-//                    if (path1.get(k+1).size() > 1){
-//
-//                    }else {
-//                        path.get(num).add(path1.get(k+1).get(0));
-//                    }
 
                     num++;
                 }
@@ -53,9 +46,9 @@ public class Find_Topk_A_db2 {
         ArrayList<ArrayList<Integer>> order2 = new ArrayList<>();
         if (currentlocal == a.length - 1) // 当当前位置指到最后一个元素时，该元素后面已经没有其他元素可以跟他交换位置，即已产生一个组合数
         {
-            order.add(new ArrayList<Integer>());
+            order.add(new ArrayList<>());
             for (int number : a) {
-                order.get(order.size() - 1).add(number);
+                order.getLast().add(number);
             }
             // System.out.println();
         } else {
@@ -78,21 +71,21 @@ public class Find_Topk_A_db2 {
     public static ArrayList<ArrayList<Integer>> Finf_Path1(ArrayList<ArrayList<Integer>> all,
                                                            ArrayList<ArrayList<Integer>> path3, int[] Poi_Type, int q) {
         ArrayList<ArrayList<Integer>> path = new ArrayList<>();
-        for (int n = 0; n < all.size(); n++) {
+        for (ArrayList<Integer> integers : all) {
             //找到q所在子图中所有的符合要求的poi
             ArrayList<ArrayList<Integer>> path1 = new ArrayList<>();
             for (int i = 0; i < Poi_Type.length; i++) {
-                path1.add(new ArrayList<Integer>());
+                path1.add(new ArrayList<>());
                 // path1.get(i).add(q);
             }
             for (int i = 0; i < Poi_Type.length; i++) {
-                path1.get(i).addAll(path3.get(all.get(n).get(i)));
+                path1.get(i).addAll(path3.get(integers.get(i)));
             }
             //找到所有的路线
             ArrayList<ArrayList<Integer>> path2 = new ArrayList<>();
-            for (int i = 0; i < path1.get(0).size(); i++) {
-                path2.add(new ArrayList<Integer>());
-                path2.get(i).add(path1.get(0).get(i));
+            for (int i = 0; i < path1.getFirst().size(); i++) {
+                path2.add(new ArrayList<>());
+                path2.get(i).add(path1.getFirst().get(i));
             }
             path.addAll(Find_Path(path1, path2, 0));
         }
@@ -100,8 +93,8 @@ public class Find_Topk_A_db2 {
 
     }
 
-    public ArrayList<LowerBound> Top_k_db2(Graph g, int q, int q_SG, int k, int[] Poi_Type, ArrayList<ArrayList<Integer>> SG, ArrayList<ArrayList<Path>> List, Poi[] PoiList,
-                                           double a, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointMinBP) {
+    public void Top_k_db2(Graph g, int q, int q_SG, int k, int[] Poi_Type, ArrayList<ArrayList<Integer>> SG, ArrayList<ArrayList<Path>> List, Poi[] PoiList,
+                          double a, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointMinBP) {
         //找到查询点q所在的子图
         boolean flag1 = false;
         //int q_SG = 0;
@@ -116,24 +109,24 @@ public class Find_Topk_A_db2 {
         ArrayList<ArrayList<Integer>> order1 = new ArrayList<>();
         ArrayList<ArrayList<Integer>> all = allsort(a2, order1, 0);
         ArrayList<ArrayList<Integer>> all1 = new ArrayList<>();
-        ArrayList<ArrayList<ArrayList<Integer>>> path = new ArrayList<>();
-        ArrayList<ArrayList<Integer>> path2 = new ArrayList<>();
+        ArrayList<ArrayList<ArrayList<Integer>>> path;
+        ArrayList<ArrayList<Integer>> path2;
         ArrayList<ArrayList<Integer>> path3 = new ArrayList<>();
         boolean flag12 = true;
-        all1.add(new ArrayList<Integer>());
+        all1.add(new ArrayList<>());
         for (int i = 0; i < Poi_Type.length; i++) {
-            all1.get(0).add(i);
+            all1.getFirst().add(i);
         }
         //将q_SG中的Poi加入path3
         for (int i = 0; i < Poi_Type.length; i++) {
-            path3.add(new ArrayList<Integer>());
+            path3.add(new ArrayList<>());
         }
         Add_PoiAsSG(path3, Poi_Type, SG, PoiList, all, q_SG);
         boolean flag4 = true;
         ArrayList<Integer> NoType = new ArrayList<>();
         int num44 = 0;
         for (int l = 0; l < path3.size(); l++) {//判断这个子图是否有全部的兴趣点
-            if (path3.get(l).size() == 0) {
+            if (path3.get(l).isEmpty()) {
                 NoType.add(l);//
                 num44++;
                 flag4 = false;
@@ -143,14 +136,14 @@ public class Find_Topk_A_db2 {
 
         if (!flag4) {
             //System.out.println("初始子图中不包括全部的Poi类型");
-            boolean flag6 = false;
+            boolean flag6;
             int num55 = 0;
             while (num44 > 0) {
-                for (int i = 0; i < SG.size(); i++) {
+                for (ArrayList<Integer> integers : SG) {
                     flag6 = false;
-                    for (int j = 0; j < SG.get(i).size(); j++) {
-                        if (PoiList[SG.get(i).get(j)].Poi_Type == Poi_Type[NoType.get(num55)]) {
-                            path3.get(NoType.get(num55)).add(SG.get(i).get(j));
+                    for (Integer integer : integers) {
+                        if (PoiList[integer].Poi_Type == Poi_Type[NoType.get(num55)]) {
+                            path3.get(NoType.get(num55)).add(integer);
                             num55++;
                             num44--;
                             flag6 = true;
@@ -166,9 +159,9 @@ public class Find_Topk_A_db2 {
         double R;
         //寻找距离查询点q最近的一个边界顶点
         int num45 = 1;
-        for (int i = 0; i < path3.size(); i++) {
-            if (path3.get(i).size() != 0) {
-                num45 = num45 * path3.get(i).size();
+        for (ArrayList<Integer> integers : path3) {
+            if (!integers.isEmpty()) {
+                num45 = num45 * integers.size();
             }
         }
         num_LJ1 += num45 * all.size();
@@ -191,22 +184,18 @@ public class Find_Topk_A_db2 {
         ArrayList<LowerBound> allPath = Find_allPath(path, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
         endTime1 = System.currentTimeMillis();
         time33 = time33 + endTime1 - startTime1;
-        // ArrayList<Lower_bound> allPath = new ArrayList<>();
-        //endTime1 = System.currentTimeMillis();
-        //time1 = endTime1 - startTime1;
-        // System.out.println("路线剪枝测试成功,所用的时间为："+time1);
 
         ArrayList<LowerBound> Top_k = Find_Top_k(allPath, k);
         double LB = Find_LB(Top_k);
         //找到W_max
         int w_max = 0;
         int w1 = 0;
-        int w1_Num = 0;
-        for (int i = 0; i < Poi_Type.length; i++) {
+        int w1_Num;
+        for (int i1 : Poi_Type) {
             w1_Num = 0;
-            for (int j = 0; j < PoiList.length; j++) {
-                if (PoiList[j].Poi_Type == Poi_Type[i] && PoiList[j].Poi_Num > w1_Num) {
-                    w1_Num = PoiList[j].Poi_Num;
+            for (Poi poi : PoiList) {
+                if (poi.Poi_Type == i1 && poi.Poi_Num > w1_Num) {
+                    w1_Num = poi.Poi_Num;
                 }
             }
             w_max = w_max + w1_Num;
@@ -215,7 +204,7 @@ public class Find_Topk_A_db2 {
         SG_num[q_SG] = 1;
         int SG_num1 = 1;//已经搜索了多少个子图
         ArrayList<Integer> SG_n = new ArrayList<>(); //判断现在有多少个图需要扩展
-        int n2 = 0; // n2大于等于7时，算法结束
+        int n2; // n2大于等于7时，算法结束
         int m = (int) Math.sqrt(SG.size());
         SG_n.add(q_SG);
         int n;
@@ -223,23 +212,20 @@ public class Find_Topk_A_db2 {
 
         //网格剪枝
         int num22 = 0;
-        int n5 = 0; //用来标记这次循环需要检查多少个图
+        int n5; //用来标记这次循环需要检查多少个图
         int n6 = 0;
         int n7 = 0;
         ArrayList<SGPoi> NoPoi = new ArrayList<>();
         ArrayList<Integer> NOPoi_Num = new ArrayList<>();
-//        for (int i = 0; i < Poi_Type.length; i++) {
-//            NoPoi.add(new ArrayList<>());
-//        }
-        while (flag) {
+        while (true) {
             ArrayList<Integer> SG3 = new ArrayList<>();
             n2 = 0;//用来存放应该加入SG_n的子图编号
             n5 = 0;
             n6 = 0;
-            for (int i = 0; i < SG_n.size(); i++) {
+            for (Integer element : SG_n) {
                 // System.out.println("w_max="+w_max+",LB="+LB);
                 R = ((1 - a) * w_max - LB) / a;
-                n = SG_n.get(i);
+                n = element;
                 int[] n1 = {n - m + 1, n - m, n - m - 1, n - 1, n + 1, n + m - 1, n + m, n + m + 1};
                 ArrayList<SGPoi> SGPoi = new ArrayList<>();
                 //计算这个子图中所有符合条件的Poi
@@ -248,38 +234,37 @@ public class Find_Topk_A_db2 {
                         if (n1[j] >= 0 && SG_num[n1[j]] == 0) {
                             n5++;
                             SGPoi.add(new SGPoi());
-                            SGPoi.get(SGPoi.size() - 1).num = n1[j];
+                            SGPoi.getLast().num = n1[j];
                             SG_num[n1[j]] = 1;
                             for (int nn = 0; nn < Poi_Type.length; nn++) {
-                                SGPoi.get(SGPoi.size() - 1).Poi.add(new ArrayList<Integer>());
+                                SGPoi.getLast().Poi.add(new ArrayList<>());
                             }
-                            Add_PoiAsSG(SGPoi.get(SGPoi.size() - 1).Poi, Poi_Type, SG, PoiList, all, SGPoi.get(SGPoi.size() - 1).num);
+                            Add_PoiAsSG(SGPoi.getLast().Poi, Poi_Type, SG, PoiList, all, SGPoi.getLast().num);
                         } else {
                             n2++;
                         }
                     }
                 }
-                for (int j = 0; j < SGPoi.size(); j++) {
-                    SG3.add(SGPoi.get(j).num);
+                for (Find_Topk_A_db2.SGPoi item : SGPoi) {
+                    SG3.add(item.num);
                 }
 
                 int n3 = 0;//用来记录SG编号
 
                 //寻找周围几个子图中每个边界顶点的最短路径
-                boolean flag3 = true;
+                boolean flag3;
 
-                for (int j = 0; j < SGPoi.size(); j++) {//判断这个子图周围的n个子图是否符合条件
+                for (Find_Topk_A_db2.SGPoi poi : SGPoi) {//判断这个子图周围的n个子图是否符合条件
                     //将NoPoi中的Poi加入SGPoi
-                    n = SGPoi.get(j).num;
+                    n = poi.num;
                     int[] n22 = {n - m + 1, n - m, n - m - 1, n - 1, n + 1, n + m - 1, n + m, n + m + 1};
-                    for (int l = 0; l < n22.length; l++) { //只添加SGPoi.get(j)子图周围八个子图中的Poi
-                        if (n22[l] < SG.size() && n22[l] > 0) {
+                    for (int value : n22) { //只添加SGPoi.get(j)子图周围八个子图中的Poi
+                        if (value < SG.size() && value > 0) {
                             //System.out.println("开始添加SGPoi.get(j)子图周围八个子图中的Poi");
-                            for (int o = 0; o < NoPoi.size(); o++) {
-                                flag3 = true;
-                                if (NoPoi.get(o).num == n22[l]) {
+                            for (Find_Topk_A_db2.SGPoi sgPoi : NoPoi) {
+                                if (sgPoi.num == value) {
                                     for (int p = 0; p < Poi_Type.length; p++) {
-                                        SGPoi.get(j).Poi.get(p).addAll(NoPoi.get(o).Poi.get(p));
+                                        poi.Poi.get(p).addAll(sgPoi.Poi.get(p));
                                     }
                                 }
                             }
@@ -287,98 +272,92 @@ public class Find_Topk_A_db2 {
                     }
 
                     //System.out.println("判断这个子图周围的n个子图是否符合条件");
-                    if (SG_num[SGPoi.get(j).num] >= 0) {
+                    if (SG_num[poi.num] >= 0) {
                         flag3 = true;
-                        for (int l = 0; l < SGPoi.get(j).Poi.size(); l++) {//判断这个子图是否有全部的兴趣点
-                            if (SGPoi.get(j).Poi.get(l).size() == 0) {
+                        for (int l = 0; l < poi.Poi.size(); l++) {//判断这个子图是否有全部的兴趣点
+                            if (poi.Poi.get(l).isEmpty()) {
                                 flag3 = false;
                                 //break;
                                 break;
                             }
                         }
-                        int q_TargetSG_w = 0;
+                        int q_TargetSG_w;
                         // System.out.println("判断这个子图是否有全部兴趣点："+flag3);
                         if (flag3) {
                             NoPoi.clear();
                             //如果有，查找q到这个子图的最短路径
-                            NOPoi_Num.add(SGPoi.get(j).num);
+                            NOPoi_Num.add(poi.num);
                             q_TargetSG_w = Integer.MAX_VALUE;
-                            for (int l = 0; l < NOPoi_Num.size(); l++) {
-                                if (BPList.get(q_BP).get(NOPoi_Num.get(l)).weight < q_TargetSG_w) {
-                                    q_TargetSG_w = BPList.get(q_BP).get(NOPoi_Num.get(l)).weight;
+                            for (Integer integer : NOPoi_Num) {
+                                if (BPList.get(q_BP).get(integer).distance < q_TargetSG_w) {
+                                    q_TargetSG_w = BPList.get(q_BP).get(integer).distance;
                                 }
                             }
                             NOPoi_Num.clear();
 
-                            SG_num[SGPoi.get(j).num] = 1;
+                            SG_num[poi.num] = 1;
                             int min = q_TargetSG_w + Min_w; //找到这些路径中最短的一条
                             //System.out.println("min="+min+",R="+R);
                             n7++;
                             if (min > (int) R) { //网格剪枝
-                                SG_num[SGPoi.get(j).num] = 2;
+                                SG_num[poi.num] = 2;
                                 num22++;
                                 n2++;
                                 n6++;
                                 continue;
                             } else {
                                 num45 = 1;
-                                for (int l = 0; l < SGPoi.get(j).Poi.size(); l++) {
-                                    if (SGPoi.get(j).Poi.get(l).size() != 0) {
-                                        num45 = num45 * SGPoi.get(j).Poi.get(l).size();
+                                for (int l = 0; l < poi.Poi.size(); l++) {
+                                    if (!poi.Poi.get(l).isEmpty()) {
+                                        num45 = num45 * poi.Poi.get(l).size();
                                     }
                                 }
                                 num_LJ1 = num_LJ1 + num45 * all.size();
                                 num_LJ3 = num45 * all.size();
-                                ArrayList<ArrayList<Integer>> path8 = Finf_Path1(all1, SGPoi.get(j).Poi, Poi_Type, q);
+                                ArrayList<ArrayList<Integer>> path8 = Finf_Path1(all1, poi.Poi, Poi_Type, q);
                                 startTime1 = System.currentTimeMillis();
                                 ArrayList<ArrayList<ArrayList<Integer>>> path7 = Find_Path2(path8, Poi_Type, PoiList, all, q, 1, LB, a);
                                 endTime1 = System.currentTimeMillis();
                                 time11 = time11 + endTime1 - startTime1;
                                 //startTime1 = System.currentTimeMillis();
-                                int num33 = 0;
-                                for (int l = 0; l < SGPoi.get(j).Poi.size(); l++) {
+                                int num33;
+                                for (int l = 0; l < poi.Poi.size(); l++) {
                                     num33 = 0;
-                                    for (int o = 0; o < SGPoi.get(j).Poi.get(l).size(); o++) {
-                                        num33 = num33 + SGPoi.get(j).Poi.get(l).size();
+                                    for (int o = 0; o < poi.Poi.get(l).size(); o++) {
+                                        num33 = num33 + poi.Poi.get(l).size();
                                     }
                                     //System.out.println("第"+l+"个Poi_Type的个数为:"+num33);
                                 }
-                                //path_k = Find_path_k(q,path7, k, q_SG,PoiList, List,PointMinBP,BPList);
-                                //long startTime2 = System.currentTimeMillis(); //开始获取时间
                                 startTime1 = System.currentTimeMillis();
                                 ArrayList<LowerBound> allPath4 = Find_allPath(path7, List, PoiList, a, q_BP, Min_w, BPList, PointMinBP, k);
                                 endTime1 = System.currentTimeMillis();
                                 time33 = time33 + endTime1 - startTime1;
-                                //long endTime2 = System.currentTimeMillis(); //开始获取时间
-                                //long time2 = endTime2 - startTime2;
 
-                                //endTime1 = System.currentTimeMillis();
-                                //time2 = endTime2 - startTime2;
                                 ArrayList<LowerBound> Top_k4 = Find_Top_k(allPath4, k);
                                 //System.out.println("Top_k4.size="+Top_k4.size());
 
                                 int top_min;
 
                                 if (Top_k.size() < k) {
-                                    boolean flag99 = true;
-                                    for (int l = 0; l < Top_k4.size(); l++) {
+                                    boolean flag99;
+                                    for (LowerBound bound : Top_k4) {
                                         flag99 = true;
-                                        for (int o = 0; o < Top_k.size(); o++) {
-                                            if (Top_k4.get(l).score == Top_k.get(o).score) {
+                                        for (LowerBound lowerBound : Top_k) {
+                                            if (bound.score == lowerBound.score) {
                                                 flag99 = false;
                                                 break;
                                             }
                                         }
                                         if (flag99) {
-                                            Top_k.add(Top_k4.get(l));
+                                            Top_k.add(bound);
                                         }
                                     }
                                 } else {
-                                    for (int l = 0; l < Top_k4.size(); l++) {
+                                    for (LowerBound lowerBound : Top_k4) {
                                         top_min = Find_LB_Num(Top_k);
-                                        if (Top_k4.get(l).score > Top_k.get(top_min).score && Top_k4.get(l).score < Double.MAX_VALUE) {
+                                        if (lowerBound.score > Top_k.get(top_min).score && lowerBound.score < Double.MAX_VALUE) {
                                             Top_k.remove(top_min);
-                                            Top_k.add(Top_k4.get(l));
+                                            Top_k.add(lowerBound);
                                         }
                                     }
                                 }
@@ -390,9 +369,9 @@ public class Find_Topk_A_db2 {
                             // System.out.println("1");
                         } else {
                             NoPoi.add(new SGPoi());
-                            NoPoi.get(NoPoi.size() - 1).Poi.addAll(SGPoi.get(j).Poi);
+                            NoPoi.getLast().Poi.addAll(poi.Poi);
 
-                            NOPoi_Num.add(SGPoi.get(j).num);
+                            NOPoi_Num.add(poi.num);
                             //System.out.println("这个图不符合要求,加入NOPoi,目前NOPoi中的子图为："+NOPoi_Num);
                             n2++;
                         }
@@ -401,7 +380,7 @@ public class Find_Topk_A_db2 {
                     }
 
                 }
-                SG_num[SG_n.get(i)] = 1;
+                SG_num[element] = 1;
             }
             //System.out.println("n2="+n2);
             //判断是否需要推出循环
@@ -411,8 +390,8 @@ public class Find_Topk_A_db2 {
                 break;
             }
             int n8 = 0;
-            for (int j = 0; j < SG_num.length; j++) {
-                if (SG_num[j] > 0) {
+            for (int i : SG_num) {
+                if (i > 0) {
                     n8++;
                 }
             }
@@ -429,13 +408,10 @@ public class Find_Topk_A_db2 {
         //计算多少个子图被计算过
         int num12 = 0;
         //int num22 = 0;
-        for (int i = 0; i < SG_num.length; i++) {
-            if (SG_num[i] > 0) {
+        for (int j : SG_num) {
+            if (j > 0) {
                 num12++;
             }
-//            if (SG_num[i] == 2){
-//                num22++;
-//            }
         }
         //System.out.println("222222222222222222222222222");
         double num17 = num_LJ2 + num_LJ4;
@@ -446,28 +422,21 @@ public class Find_Topk_A_db2 {
         System.out.println("A的折返优化算法一共进行的路线查找次数" + num_LJ1 + ",总剪枝的路线的数目为：" + (num_LJ2 + num_LJ4) + ",实际计算的路线的数目为：" + (num_LJ1 - num_LJ2 - num_LJ4) + ",剪枝效率为：" + BL +
                 ",其中第一阶段剪枝的路线为：" + num_LJ2 + ",第二阶段剪枝的路线为：" + num_LJ4);
         System.out.println("第一阶段剪枝消耗的时间为" + time11 + ",第二阶段剪枝消耗的时间为：" + time33);
-//        System.out.print("A_db2找到的最优路径的score为：");
-//        for (int i = 0; i < Top_k.size(); i++) {
-//            System.out.print(Top_k.get(i).score);
-//            System.out.print(", ");
-//        }
-//        System.out.println("");
-        //System.out.println("路线剪枝共消耗时间为："+time11);
-        //System.out.println("路线剪枝中一部分消耗时间为："+time22);
-        return Top_k;
     }
 
     public ArrayList<LowerBound> Find_allPath(ArrayList<ArrayList<ArrayList<Integer>>> path, ArrayList<ArrayList<Path>> List, Poi[] PoiList, double a,
                                               int q_BP, int w_BP, ArrayList<ArrayList<PoiPath>> BPList, ArrayList<ArrayList<Integer>> PointList, int k) {
         ArrayList<LowerBound> LB = new ArrayList<>();
-        int w = 0;
+        int w;
         int num = 0;
-        double score_Min = 0;
+        double score_Min;
         double score1 = 0;
-        int q_BP1 = q_BP;
-        int w_BP1 = w_BP;
-        long startTime2 = System.currentTimeMillis(); //开始获取时间
-        long endTime2 = System.currentTimeMillis(); //开始获取时间
+        int q_BP1;
+        int w_BP1;
+        System.currentTimeMillis();
+        long startTime2; //开始获取时间
+        System.currentTimeMillis();
+        long endTime2; //开始获取时间
         long time2 = 0;
         long time3 = 0;
         long time4 = 0;
@@ -479,27 +448,27 @@ public class Find_Topk_A_db2 {
         int Poi_NUM;
         int q_index;
         int q_index1;
-        for (int i = 0; i < path.size(); i++) {
+        for (ArrayList<ArrayList<Integer>> arrayLists : path) {
             //num_LJ1 = num_LJ1 + path.get(i).size();
-            for (int ii = 0; ii < path.get(i).size(); ii++) {
+            for (ArrayList<Integer> arrayList : arrayLists) {
                 Poi_NUM = 0;
-                for (int j = 1; j < path.get(i).get(ii).size(); j++) {
-                    Poi_NUM += PoiList[path.get(i).get(ii).get(j)].Poi_Num;
+                for (int j = 1; j < arrayList.size(); j++) {
+                    Poi_NUM += PoiList[arrayList.get(j)].Poi_Num;
                 }
                 //计算这种组合形式的欧式距离
 
                 int x;
                 int y;
                 w = 0;
-                for (int j = 0; j < path.get(i).get(ii).size() - 1; j++) {
-                    q_index = path.get(i).get(ii).get(j);
-                    q_index1 = path.get(i).get(ii).get(j + 1);
+                for (int j = 0; j < arrayList.size() - 1; j++) {
+                    q_index = arrayList.get(j);
+                    q_index1 = arrayList.get(j + 1);
                     x = PoiList[q_index].x - PoiList[q_index1].x;
                     y = PoiList[q_index].y - PoiList[q_index1].y;
                     w += (int) Math.sqrt(Math.pow(x, 2) + Math.pow(y, 2));
                 }
                 //判断是否需要剪枝
-                if (LB.size() != 0) {
+                if (!LB.isEmpty()) {
                     if (w != 0)
                         score1 = (-a) * w + (1 - a) * Poi_NUM;
                     score_Min = LB.get(Find_LB_Num(LB)).score;
@@ -511,9 +480,9 @@ public class Find_Topk_A_db2 {
                 w = 0;
                 path1.clear();
 
-                for (int j = 0; j < path.get(i).get(ii).size() - 1; j++) {
-                    q_index = path.get(i).get(ii).get(j);
-                    q_index1 = path.get(i).get(ii).get(j + 1);
+                for (int j = 0; j < arrayList.size() - 1; j++) {
+                    q_index = arrayList.get(j);
+                    q_index1 = arrayList.get(j + 1);
                     q_BP1 = PointList.get(q_index).get(0);
                     w_BP1 = PointList.get(q_index).get(1);
                     if (PoiList[q_index].SG == PoiList[q_index1].SG) {
@@ -525,7 +494,7 @@ public class Find_Topk_A_db2 {
                         }
                     } else {
                         if (q_BP1 != Integer.MAX_VALUE) {
-                            w = w + w_BP1 + BPList.get(q_BP1).get(PoiList[q_index1].SG).weight;
+                            w = w + w_BP1 + BPList.get(q_BP1).get(PoiList[q_index1].SG).distance;
                             for (int k1 = 0; k1 < List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).size(); k1++) {
                                 if (List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).get(k1).end == q_index1) {
                                     w = w + List.get(BPList.get(q_BP1).get(PoiList[q_index1].SG).target).get(k1).weight;
@@ -542,26 +511,22 @@ public class Find_Topk_A_db2 {
                 LowerBound nn = new LowerBound();
                 if (LB.size() < k) {
                     LB.add(new LowerBound());
-                    LB.get(LB.size() - 1).path.clear();
-                    LB.get(LB.size() - 1).path.addAll(path.get(i).get(ii));
-                    LB.get(LB.size() - 1).dis = w;
-                    for (int kk = 0; kk < LB.get(LB.size() - 1).path.size(); kk++) {
+                    LB.getLast().path.clear();
+                    LB.getLast().path.addAll(arrayList);
+                    LB.getLast().dis = w;
+                    for (int kk = 0; kk < LB.getLast().path.size(); kk++) {
                         //LB.get(num).w_poi += PoiList[LB.get(num).path.get(k)].Poi_Num;
-                        LB.get(LB.size() - 1).totalInterest += PoiList[path.get(i).get(ii).get(kk)].Poi_Num;
+                        LB.getLast().totalInterest += PoiList[arrayList.get(kk)].Poi_Num;
                     }
-                    LB.get(LB.size() - 1).score = (-a) * LB.get(LB.size() - 1).dis + (1 - a) * LB.get(LB.size() - 1).totalInterest;
+                    LB.getLast().score = (-a) * LB.getLast().dis + (1 - a) * LB.getLast().totalInterest;
                 } else {
                     startTime2 = System.currentTimeMillis();
                     score_Min = LB.get(Find_LB_Num(LB)).score;
 
                     nn.path.clear();
-                    nn.path.addAll(path.get(i).get(ii));
+                    nn.path.addAll(arrayList);
                     nn.dis = w;
                     nn.totalInterest = Poi_NUM;
-//                            for (int kk = 0; kk < LB.get(LB.size()-1).path.size(); kk++) {
-//                                //LB.get(num).w_poi += PoiList[LB.get(num).path.get(k)].Poi_Num;
-//                                nn.w_poi += PoiList[path.get(i).get(ii).get(kk)].Poi_Num;
-//                            }
                     nn.score = (-a) * nn.dis + (1 - a) * nn.totalInterest;
                     if (nn.score > score_Min) {
                         LB.get(Find_LB_Num(LB)).path = nn.path;
@@ -581,23 +546,17 @@ public class Find_Topk_A_db2 {
 
 
         }
-//        System.out.println("第一部分所消耗的时间为："+ time2);
-//        System.out.println("第二部分所消耗的时间为："+ time3);
-//        System.out.println("第三部分所消耗的时间为："+ time3);
-//        System.out.println("第四部分所消耗的时间为："+ time4);
-//        System.out.println("第五部分所消耗的时间为："+ time5);
-//        System.out.println("第六部分所消耗的时间为："+ time6);
         return LB;
     }
 
     public ArrayList<LowerBound> Find_Top_k(ArrayList<LowerBound> a, int k) {
         ArrayList<LowerBound> top_k = new ArrayList<>();
-        int n = 0;
+        int n;
         for (int i = 0; i < a.size(); i++) {
             if (top_k.size() < k && a.get(i).dis != 0) {
                 top_k.add(a.get(i));
             } else {
-                if (a.size() != 0 && top_k.size() != 0) {
+                if (!top_k.isEmpty()) {
                     n = Find_LB_Num(top_k);
                     if (a.get(i).score > top_k.get(n).score && a.get(i).dis != 0) {
                         top_k.remove(n);
@@ -613,9 +572,9 @@ public class Find_Topk_A_db2 {
     public double Find_LB(ArrayList<LowerBound> Top_k) {
         //int LB = 0;
         double LB_score = Double.MAX_VALUE;
-        for (int i = 0; i < Top_k.size(); i++) {
-            if (LB_score > Top_k.get(i).score) {
-                LB_score = Top_k.get(i).score;
+        for (LowerBound lowerBound : Top_k) {
+            if (LB_score > lowerBound.score) {
+                LB_score = lowerBound.score;
                 //LB = i;
             }
 
@@ -643,54 +602,54 @@ public class Find_Topk_A_db2 {
         ArrayList<Integer> y = new ArrayList<>();
         boolean flag_x = true;
         boolean flag_y = true;
-        double x_min = 0;
-        double x_max = 0;
-        double num16 = 0;
+        double x_min;
+        double x_max;
+        double num16;
         ArrayList<x_ty> x_right = new ArrayList<>();
         ArrayList<x_ty> x_left = new ArrayList<>();
         ArrayList<x_ty> y_right = new ArrayList<>();
         ArrayList<x_ty> y_left = new ArrayList<>();
         ArrayList<ArrayList<Integer>> path3 = new ArrayList<>();
         for (int i = 0; i < Poi_Type.length; i++) {
-            path3.add(new ArrayList<Integer>());
+            path3.add(new ArrayList<>());
         }
-        for (int i = 0; i < path.size(); i++) {
-            find_Path.add(new ArrayList<ArrayList<Integer>>());
+        for (ArrayList<Integer> integers : path) {
+            find_Path.add(new ArrayList<>());
             //找到x的两端
             x_right.clear();
             x_left.clear();
             x_max = 0;
             x_min = 0;
-            for (int j = 0; j < path.get(i).size(); j++) { //计算x轴的分布情况
-                if (PoiList[path.get(i).get(j)].x >= PoiList[q].x) { //如果这个点在q的右边
-                    num16 = PoiList[path.get(i).get(j)].x - PoiList[q].x;
+            for (Integer item : integers) { //计算x轴的分布情况
+                if (PoiList[item].x >= PoiList[q].x) { //如果这个点在q的右边
+                    num16 = PoiList[item].x - PoiList[q].x;
                     if (num16 < 0) {
                         num16 = -num16;
                     }
                     if (num16 >= x_max) { //这个点在最右边
                         x_max = num16;
                         // x_right.add(path.get(i).get(j));
-                        x_right.add(new x_ty(path.get(i).get(j), num16));
+                        x_right.add(new x_ty(item, num16));
                     } else {
                         for (int k = 0; k < x_right.size(); k++) {
                             if (num16 <= x_right.get(k).num) {
-                                x_right.add(k, new x_ty(path.get(i).get(j), num16));
+                                x_right.add(k, new x_ty(item, num16));
                                 break;
                             }
                         }
                     }
                 } else {
-                    num16 = PoiList[q].x - PoiList[path.get(i).get(j)].x;
+                    num16 = PoiList[q].x - PoiList[item].x;
                     if (num16 < 0) {
                         num16 = -num16;
                     }
                     if (num16 >= x_min) {
                         x_min = num16;
-                        x_left.add(new x_ty(path.get(i).get(j), num16));
+                        x_left.add(new x_ty(item, num16));
                     } else {
                         for (int k = 0; k < x_left.size(); k++) {
                             if (num16 <= x_left.get(k).num) {
-                                x_left.add(k, new x_ty(path.get(i).get(j), num16));
+                                x_left.add(k, new x_ty(item, num16));
                                 break;
                             }
                         }
@@ -704,36 +663,36 @@ public class Find_Topk_A_db2 {
             x_max = 0;
             x_min = 0;
 
-            for (int j = 0; j < path.get(i).size(); j++) { //计算y轴的分布情况
-                if (PoiList[path.get(i).get(j)].y >= PoiList[q].y) { //如果这个点在q的右边
-                    num16 = PoiList[path.get(i).get(j)].y - PoiList[q].y;
+            for (Integer value : integers) { //计算y轴的分布情况
+                if (PoiList[value].y >= PoiList[q].y) { //如果这个点在q的右边
+                    num16 = PoiList[value].y - PoiList[q].y;
                     if (num16 < 0) {
                         num16 = -num16;
                     }
                     if (num16 >= x_max) { //这个点在最右边
                         x_max = num16;
                         // x_right.add(path.get(i).get(j));
-                        y_right.add(new x_ty(path.get(i).get(j), num16));
+                        y_right.add(new x_ty(value, num16));
                     } else {
                         for (int k = 0; k < y_right.size(); k++) {
                             if (num16 <= y_right.get(k).num) {
-                                y_right.add(k, new x_ty(path.get(i).get(j), num16));
+                                y_right.add(k, new x_ty(value, num16));
                                 break;
                             }
                         }
                     }
                 } else {
-                    num16 = PoiList[q].y - PoiList[path.get(i).get(j)].y;
+                    num16 = PoiList[q].y - PoiList[value].y;
                     if (num16 < 0) {
                         num16 = -num16;
                     }
                     if (num16 >= x_min) {
                         x_min = num16;
-                        y_left.add(new x_ty(path.get(i).get(j), num16));
+                        y_left.add(new x_ty(value, num16));
                     } else {
                         for (int k = 0; k < y_left.size(); k++) {
                             if (num16 <= y_left.get(k).num) {
-                                y_left.add(k, new x_ty(path.get(i).get(j), num16));
+                                y_left.add(k, new x_ty(value, num16));
                                 break;
                             }
                         }
@@ -741,21 +700,21 @@ public class Find_Topk_A_db2 {
                 }
             }
 
-            x_left.add(0, new x_ty(q, 0));
-            x_right.add(0, new x_ty(q, 0));
-            y_left.add(0, new x_ty(q, 0));
-            y_right.add(0, new x_ty(q, 0));
+            x_left.addFirst(new x_ty(q, 0));
+            x_right.addFirst(new x_ty(q, 0));
+            y_left.addFirst(new x_ty(q, 0));
+            y_right.addFirst(new x_ty(q, 0));
             if ((x_left.size() <= 1 && y_left.size() <= 1) || (x_left.size() <= 1 && y_right.size() <= 1) ||
                     (x_right.size() <= 1 && y_right.size() <= 1) || (x_right.size() <= 1 && y_left.size() <= 1)) { //q是否在最左边或者最右边
-                find_Path.get(find_Path.size() - 1).add(new ArrayList<Integer>());
+                find_Path.getLast().add(new ArrayList<>());
                 //find_Path.get(find_Path.size()-1).get(find_Path.get(find_Path.size()-1).size()-1).add(q);
                 if (x_left.size() <= 1) {
-                    for (int j = 0; j < x_right.size(); j++) {
-                        find_Path.get(find_Path.size() - 1).get(find_Path.get(find_Path.size() - 1).size() - 1).add(x_right.get(j).x);
+                    for (x_ty xTy : x_right) {
+                        find_Path.getLast().getLast().add(xTy.x);
                     }
                 } else {
-                    for (int j = 0; j < x_left.size(); j++) {
-                        find_Path.get(find_Path.size() - 1).get(find_Path.get(find_Path.size() - 1).size() - 1).add(x_left.get(j).x);
+                    for (x_ty xTy : x_left) {
+                        find_Path.getLast().getLast().add(xTy.x);
                     }
                 }
                 continue;
@@ -781,8 +740,8 @@ public class Find_Topk_A_db2 {
                     }
                 }
                 int Poi_Num = 0;
-                for (int j = 0; j < path.get(i).size(); j++) { //计算这一组兴趣点的兴趣值之和
-                    Poi_Num += PoiList[path.get(i).get(j)].Poi_Num;
+                for (Integer integer : integers) { //计算这一组兴趣点的兴趣值之和
+                    Poi_Num += PoiList[integer].Poi_Num;
                 }
                 double score_x = (-a) * x1 + (1 - a) * Poi_Num;
                 if (score_x < LB) { //剪枝
@@ -792,23 +751,23 @@ public class Find_Topk_A_db2 {
 
             for (int j = 0; j < path3.size(); j++) {
                 path3.get(j).clear();
-                path3.get(j).add(path.get(i).get(j));
+                path3.get(j).add(integers.get(j));
             }
-            find_Path.get(find_Path.size() - 1).addAll(Finf_Path1(all, path3, Poi_Type, q));
+            find_Path.getLast().addAll(Finf_Path1(all, path3, Poi_Type, q));
             ArrayList<Integer> path22 = new ArrayList<>();
-            for (int j = 0; j < find_Path.get(find_Path.size() - 1).size(); j++) {
+            for (int j = 0; j < find_Path.getLast().size(); j++) {
                 path22.clear();
-                path22.addAll(find_Path.get(find_Path.size() - 1).get(j));
-                find_Path.get(find_Path.size() - 1).get(j).clear();
-                find_Path.get(find_Path.size() - 1).get(j).add(q);
-                find_Path.get(find_Path.size() - 1).get(j).addAll(path22);
+                path22.addAll(find_Path.getLast().get(j));
+                find_Path.getLast().get(j).clear();
+                find_Path.getLast().get(j).add(q);
+                find_Path.getLast().get(j).addAll(path22);
             }
 
         }
         int num4 = 0;
-        for (int i = 0; i < find_Path.size(); i++) {
-            if (find_Path.get(i).size() != 0) {
-                num4 = num4 + find_Path.get(i).size();
+        for (ArrayList<ArrayList<Integer>> arrayLists : find_Path) {
+            if (!arrayLists.isEmpty()) {
+                num4 = num4 + arrayLists.size();
             }
         }
         //num_LJ5 += num4;
@@ -831,26 +790,9 @@ public class Find_Topk_A_db2 {
         }
     }
 
-    public class Poi_B {
-        public int x; //顶点所在x轴子图
-        public int y;//顶点所在y轴子图
-        public int SG;
-        public ArrayList<Integer> path;//在这个小小子图中的顶点的编号
-        // public ArrayList<Integer> path_SG ;//在这个小小子图中的顶点所在的子图
-        public ArrayList<Integer> otherPath;//这组顶点中对其他组进行剪枝的点的编号
-
-        public Poi_B() {
-            this.x = 0;
-            this.y = 0;
-            this.SG = 0;
-            this.path = new ArrayList<>();
-            this.otherPath = new ArrayList<>();
-        }
-    }
-
-    public class SGPoi {
+    public static class SGPoi {
         public int num; //子图的编号
-        public ArrayList<ArrayList<Integer>> Poi;
+        public final ArrayList<ArrayList<Integer>> Poi;
 
         public SGPoi() {
             this.num = 0;
@@ -858,9 +800,9 @@ public class Find_Topk_A_db2 {
         }
     }
 
-    public class x_ty {
-        public int x;
-        public double num;
+    public static class x_ty {
+        public final int x;
+        public final double num;
 
         public x_ty() {
             this.x = 0;
